<resources>
    <string name="app_name">ZaraHood</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_user_name">enter user name</string>
    <string name="enter_password">enter password</string>
    <string name="login_btn_txt">Login</string>
    <string name="product_tab_toolbar_title">DashBoard</string>
    <string name="price_tv">Inr %1$s</string>
    <string name="profile_name_tv">Name: %1$s</string>
    <string name="profile_dob_tv">DOB: %1$s</string>
    <string name="profile_points_tv">Points Earned: %1$s Points</string>
    <string name="item_click">Click here to join us for more rewards</string>
    <string name="item_click_toast_msg">Thank you for joining our reward program</string>
    <string name="profile_title">Profile</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="pass_empty">password cannot be empty</string>
    <string name="forgot_pass_click">Forgot password clicked</string>
    <string name="pass_length_error">the password must have minimum length of 5, but length is %1d char</string>
    <string name="name_error_text">username format incorrect,should have @</string>
    <string name="name_error_empty_text">username cannot be empty</string>
    <string name="login_failed_msg">Login Failed Please Retry</string>
    <string name="login_tv_title">Login</string>
    <string name="retry">Retry</string>
    <string name="viewpager_adapter_not_found_error_text">viewPager adapter not set, adapter is giving null value</string>
    <string name="only_2_tabs_ui_constraint_violated">only 2 tabs: Ui constraints violated</string>
    <string name="failed_to_verify">failed to verify</string>
</resources>