<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.LoginActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingVertical="8dp"
        android:text="@string/login_tv_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username_edt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:inputType="text"
        android:paddingVertical="16dp"
        android:maxLength="10"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:drawableEnd="@drawable/user_img_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="60dp"
        android:hint="@string/enter_user_name"
        app:layout_constraintTop_toBottomOf="@id/login_tv" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/userPass_edt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:paddingVertical="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="10"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:drawableEnd="@drawable/lock_img_edt"
        android:inputType="textVisiblePassword"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_password"
        app:layout_constraintTop_toBottomOf="@id/username_edt" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textStyle="bold"
        android:text="@string/login_btn_txt"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPass_edt" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/forgot_pass_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textColor="@color/blue"
        android:paddingVertical="8dp"
        android:text="@string/forgot_pass"
        />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/retryBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:paddingVertical="8dp"
        android:text="@string/retry"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>